@@ -321,6 +321,9 @@
               <property name="statusTip">
                <string/>
               </property>
+              <property name="maximum">
+               <number>9999</number>
+              </property>
               <property name="value">
                <number>1</number>
               </property>
@@ -566,7 +569,7 @@
      <x>0</x>
      <y>0</y>
      <width>780</width>
-     <height>29</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
