@@ -1,3 +1,7 @@
+2018-03-30 Magnus Hagdorn
+ * piccolo2/player/player.ui: increase maximum number of repeats to 9999;
+ fixes GUI-13
+
 2017-12-21 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: display version strings
  * piccolo2/player/player.ui: add place to display versions
